@@ -159,13 +159,13 @@ Disassembly of section .text:
 0+254 <[^>]*> e9c40300 ?	stmib	r4, {r8, r9}\^
 0+258 <[^>]*> ef123456 ?	swi	0x00123456
 0+25c <[^>]*> 2f000033 ?	swics	0x00000033
-0+260 <[^>]*> ebfffffe ?	bl	0[0123456789abcdef]+ <[^>]*>
+0+260 <[^>]*> eb...... ?	bl	0[0123456789abcdef]+ <[^>]*>
 [		]*260:.*_wombat.*
-0+264 <[^>]*> 5bfffffe ?	blpl	0[0123456789abcdef]+ <[^>]*>
-[		]*264:.*ARM.*hohum
-0+268 <[^>]*> eafffffe ?	b	0[0123456789abcdef]+ <[^>]*>
+0+264 <[^>]*> 5b...... ?	blpl	0[0123456789abcdef]+ <[^>]*>
+[		]*264:.*ARM.*hohum.*
+0+268 <[^>]*> ea...... ?	b	0[0123456789abcdef]+ <[^>]*>
 [		]*268:.*_wibble.*
-0+26c <[^>]*> dafffffe ?	ble	0[0123456789abcdef]+ <[^>]*>
+0+26c <[^>]*> da...... ?	ble	0[0123456789abcdef]+ <[^>]*>
 [		]*26c:.*testerfunc.*
 0+270 <[^>]*> e1a01102 ?	mov	r1, r2, lsl #2
 0+274 <[^>]*> e1a01002 ?	mov	r1, r2
