@@ -6,8 +6,8 @@
 .*: +file format .*arm.*
 
 Disassembly of section .text:
-00+0 <[^>]*> ebfffffe 	bl	00+0 <[^>]*>
-			0: R_ARM_PC24	foo
+00+0 <[^>]*> eb...... 	bl	00+. <[^>]*>
+			0: R_ARM_PC24	foo.*
 00+4 <[^>]*> ebfffffe 	bl	0[0123456789abcdef]+ <[^>]*>
 			4: R_ARM_PLT32	foo
 	\.\.\.
